- did some nice stuff with GIN

--- a/src/main/java/ch/kdev/todo/client/ui/project/view/ViewProjectViewDesktop.ui.xml
+++ b/src/main/java/ch/kdev/todo/client/ui/project/view/ViewProjectViewDesktop.ui.xml
@@ -31,7 +31,11 @@
 			
 			<tr>
 				<td></td>
-				<td><g:Button ui:field="editProjectButton">Edit Project</g:Button></td>
+				
+				<td>
+					<g:Button ui:field='manageProjectsButton'>Manage Projects</g:Button>
+					<g:Button ui:field="editProjectButton">Edit Project</g:Button>
+				</td>
 			</tr>
 		</table>
 	</g:HTMLPanel>
