--- a/src/main/java/ch/kdev/todo/client/view/project/view/ViewProjectView.ui.xml
+++ b/src/main/java/ch/kdev/todo/client/view/project/view/ViewProjectView.ui.xml
@@ -30,6 +30,18 @@
 			</tr>
 			
 			<tr>
+				<td>
+					<g:Label>Task List:</g:Label>
+				</td>
+				
+				<td>
+					<g:ListBox ui:field="taskList">
+						
+					</g:ListBox>
+				</td>
+			</tr>
+			
+			<tr>
 				<td></td>
 				
 				<td>
